# backend/src/controller/userauth/UserController/User.controller.ts
@@ -1,8 +1,12 @@
-import { Controller, Delete, Get, Middlewares, Path, Query, Route } from "tsoa";
+import { Body, Controller, Delete, Get, Middlewares, Patch, Path, Put, Query, Route } from "tsoa";
 import { Adminmiddleware } from "../../../Middlewares/AdminMiddleware.ts";
 import type { UserRole } from "../../../enum/enum.details.ts";
 import UserServices from "../../../services/UserService/User.services.ts";
 import path from "node:path";
+import type UpdateProfileDto from "../../../dto/UpdatedProfile.dto.ts";
+
+
+
 
 @Route("users")
 export class UserController extends Controller {
@@ -39,5 +43,17 @@ export class UserController extends Controller {
          }catch(err){
             console.log("th eerror is ",err)
          }
+    }
+    @Patch("update/{id}")
+    async UpdateProfile(
+        @Path() id: string,
+        @Body() body: UpdateProfileDto
+    ){
+       try{
+
+    return await UserServices.UpdateUserProfile(id,body)
+       }catch(err){
+        console.log("the error is ",err)
+       }
     }
 }
