# backend/src/dto/UpdatedProfile.dto.ts
@@ -1,0 +1,26 @@
+import { IsArray, IsEmail, IsOptional, IsString } from "class-validator";
+
+ class UpdateProfileDto{
+    @IsString()
+    @IsOptional()
+    FullName: string
+
+    @IsString()
+    @IsEmail()
+    @IsOptional()
+    Email: string
+
+    @IsString()
+    @IsOptional()
+    Phone: string
+
+    @IsString()
+    @IsOptional()
+    @IsArray()
+    address: string[];
+
+   @IsString()
+   @IsOptional()
+   profile: string
+}
+export default UpdateProfileDto
